[gd_scene load_steps=4 format=3 uid="uid://dqqybqprvuj7i"]

[ext_resource type="Texture2D" uid="uid://b312g63ioaaet" path="res://Sprites/Weapons/Rock.png" id="1_16gr4"]
[ext_resource type="Script" path="res://Scripts/Weapons/Rock.gd" id="2_cl5pf"]
[ext_resource type="AudioStream" uid="uid://br61mrhe0ixlj" path="res://Sounds/Throw.mp3" id="3_i72oh"]

[node name="Rock" type="Sprite2D"]
texture = ExtResource("1_16gr4")
script = ExtResource("2_cl5pf")
shoot_cooldown = 0.9
original_energy_use = 15.0
energy_recover_cooldown = 1.5

[node name="Throw_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i72oh")
volume_db = 5.0
pitch_scale = 0.7
bus = &"Sounds"

[node name="Recharge_Visual" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="Recharge_Visual" to="." method="_on_recharge_visual_timeout"]
